# symbolscript

./: .gitignore  CMakeLists.txt  README.md  meson.build  overcoming_shortcomings.txt  symbolscript.pc.in
include/: context.h  data.h  debug.h  liner.h  mmanager.h  sym.h  symcore.h  symio.h  symmem.h  tokenizer.h
src/: context.c  data.c  liner.c  meson.build  mmanager.c  sym.c  symmem.c  tokenizer.c
test/: CMakeLists.txt  bdd.h  test_tokener.c
